Changed Index.html and main.css and added BGs

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -63,8 +63,8 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2>AV Danse Studio</h2>
-            <p>A center for <span class="typed" data-typed-items="Artistry, Movement, Culture, Growth">Innovation</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <h2 style="color: aliceblue;">AV Danse Studio</h2>
+            <p style="color: aliceblue;">Experience the elegance of Bharatanatyam at <br> our studio where tradition blends passion.</p>
             <div class="social-links">
               <a href="#"><i class="bi bi-twitter-x"></i></a>
               <a href="#"><i class="bi bi-facebook"></i></a>
@@ -74,7 +74,7 @@
           </div>
         </div>
       </div>
-      <img src="assets/img/B1.png" alt="">
+      <img src="assets/img/BG1.jpg" alt="">
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
@@ -151,7 +151,7 @@
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-headset"></i>
+            <i class="bi bi-briefcase"></i>
             <div class="stats-item">
               <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1" class="purecounter"></span>
               <p>Years of Experience</p>
