--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -64,7 +64,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2 style="color: aliceblue;">AV Danse Studio</h2>
-            <p style="color: aliceblue;">Experience the elegance of Bharatanatyam at <br> our studio where tradition blends passion.</p>
+            <p style="color: aliceblue;">Experience the elegance of Bharatanatyam at <br> our studio where tradition blends passion</p>
             <div class="social-links">
               <a href="#"><i class="bi bi-twitter-x"></i></a>
               <a href="#"><i class="bi bi-facebook"></i></a>
