Added a dot and changed to 'Award' in Index.html

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -64,7 +64,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2 style="color: aliceblue;">AV Danse Studio</h2>
-            <p style="color: aliceblue;">Experience the elegance of Bharatanatyam at <br> our studio where tradition blends passion</p>
+            <p style="color: aliceblue;">Experience the elegance of Bharatanatyam at <br> our studio where tradition blends passion.</p>
             <div class="social-links">
               <a href="#"><i class="bi bi-twitter-x"></i></a>
               <a href="#"><i class="bi bi-facebook"></i></a>
@@ -159,10 +159,10 @@
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-people"></i>
+            <i class="bi bi-award"></i>
             <div class="stats-item">
               <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
+              <p>Awards</p>
             </div>
           </div><!-- End Stats Item -->
 
