Backgrlund image and title text

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - MyResume Bootstrap Template</title>
+  <title>AV Danse studio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -74,7 +74,7 @@
           </div>
         </div>
       </div>
-      <img src="assets/img/BG2.jpg" alt="">
+      <img src="assets/img/Hovedimage2.png" alt="">
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
