--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -351,11 +351,11 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/2023/2023-1.HEIC" class="img-fluid" alt="">
+              <img src="assets/img/2023/2023-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2023 Anuual event</h4>
                 <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/2023/2023-1.HEIC" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/2023/2023-1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -381,11 +381,11 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/2023/2023-2.HEIC" class="img-fluid" alt="">
+              <img src="assets/img/2023/2023-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2023 Annual event</h4>
                 <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/2023/2023-2.HEIC" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/2023/2023-2.png" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -411,11 +411,11 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/2023/2023-3.HEIC" class="img-fluid" alt="">
+              <img src="assets/img/2023/2023-3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2023 Annual event</h4>
                 <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/2023/2023-3.HEIC" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/2023/2023-3.png" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
