Changes in the photo description

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -344,7 +344,7 @@
               <img src="assets/img/2024/2024-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2024 Annual event</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Annual event conducted by AVDS</p>
                 <a href="assets/img/2024/2024-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -354,7 +354,7 @@
               <img src="assets/img/2023/2023-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2023 Anuual event</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Annual event conducted by AVDS</p>
                 <a href="assets/img/2023/2023-1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -364,7 +364,7 @@
               <img src="assets/img/Other/other-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>OCF performance 2024</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Oslo color festival Bharatanatyam performance</p>
                 <a href="assets/img/Other/other-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -374,7 +374,7 @@
               <img src="assets/img/2024/2024-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2024 Annual event</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Annual event conducted by AVDS</p>
                 <a href="assets/img/2024/2024-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -384,7 +384,7 @@
               <img src="assets/img/2023/2023-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2023 Annual event</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Annual event conducted by AVDS</p>
                 <a href="assets/img/2023/2023-2.png" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -394,7 +394,7 @@
               <img src="assets/img/Other/other-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>OCF performance 2023</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Oslo color festival Bharatanatyam performance</p>
                 <a href="assets/img/Other/other-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -404,7 +404,7 @@
               <img src="assets/img/2024/2024-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2024 Annual event</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Annual event conducted by AVDS</p>
                 <a href="assets/img/2024/2024-3.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -414,7 +414,7 @@
               <img src="assets/img/2023/2023-3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2023 Annual event</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Annual event conducted by AVDS</p>
                 <a href="assets/img/2023/2023-3.png" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -424,7 +424,7 @@
               <img src="assets/img/Other/other-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Indian Embassy performance 2024</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Bharatanatyam performance in Indian Embassy during Republic day</p>
                 <a href="assets/img/Other/other-3.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
