--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -63,7 +63,7 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2 style="color: aliceblue;">AV Danse Studio</h2>
+            <h2 style="color: #E1D4C2;">AV Danse Studio</h2>
             <p style="color: #E1D4C2;">Experience the elegance of Bharatanatyam at <br> our studio where tradition blends passion.</p>
             <div class="social-links">
               <a href="#"><i style="color: #BEB5A9;" class="bi bi-twitter-x"></i></a>
