--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -95,10 +95,9 @@
           <div class="col-lg-8 content">
             <h2>Bharatanatyam Instructor</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Amirtha comes from an artistic background where Bharatanatyam has been part of her legacy for 3 generations. She started learning Bharatanatyam since 5 years under her mother’s guidance and performed her Arangetram at the age of 13. Since then, she has performed, choreographed and acted dance dramas. Her passion is choreographing thematic performances. In addition to her experience, she also holds Master’s degree in Bharatanatyam and continue to teach & choreograph Bharatanatyam both in India and Norway. 
             </p>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
@@ -119,7 +118,7 @@
             <p class="py-3">
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
               Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-            </p>
+            </p> -->
           </div>
         </div>
         <br>
@@ -133,7 +132,7 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
             </p>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
@@ -154,7 +153,7 @@
             <p class="py-3">
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
               Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-            </p>
+            </p> -->
           </div>
         </div>
 
