--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -93,7 +93,7 @@
             <img src="assets/img/Profile1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Bharatanatyam Instructor</h2>
+            <h2>Mrs. Amirthavarshini Raju (Bharatanatyam Instructor)</h2>
             <p class="fst-italic py-3">
               Amirtha comes from an artistic background where Bharatanatyam has been part of her legacy for 3 generations. She started learning Bharatanatyam since 5 years under her mother’s guidance and performed her Arangetram at the age of 13. Since then, she has performed, choreographed and acted dance dramas. Her passion is choreographing thematic performances. In addition to her experience, she also holds Master’s degree in Bharatanatyam and continue to teach & choreograph Bharatanatyam both in India and Norway. 
             </p>
@@ -127,10 +127,11 @@
             <img src="assets/img/Profile2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Divine Inspiration</h2>
+            <h2>Mrs. Hemamalini Raju (Divine Inspiration)</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Hemamalini Raju is the mother and Guru of Ms Amirtha Raju who comes from traditional music and dance family background. She has completed her diploma and won KALAIMANI title from Thanjavur tamizh university she also been awarded Natya Kalaratna from Dubai tamil sangham. She had trained more than 100 students.
+
+              Her unique compositions are Bharathiyarin parimanal,Bhavayami Ramayanam , tamil Ashtapathi, and Krishna Leela mathuryam. She was a dedicated Sahaja Yoga practitioner and has choreographed for many spiritual scriptures and songs from various languages for international Sahaja yoga seminars. She has also trained her students for both physical and mental balance through meditation and dance. after her demise the school has been still taken up and run with same principle and guidance by her daughter and Senior students.
             </p>
             <!-- <div class="row">
               <div class="col-lg-6">
