Changing the Contact text

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -724,7 +724,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Please feel free to reach out if you are interested in learning the dance form. Age is not a factor when you have the passion to learn.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade" data-aos-delay="100">
