--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -497,7 +497,7 @@
               <a href="#" class="stretched-link">
                 <h3>Beginner Bharatanatyam classes</h3>
               </a>
-              <p>We offer Bharatanatyam class for begineers from Age 5. Earlier the age it is most likely the students will learn the basics with nalinam</p>
+              <p>We offer Bharatanatyam class for beginners from Age 5. Earlier the age it is most likely the students will learn the basics with nalinam</p>
             </div>
           </div><!-- End Service Item -->
 
