Revert "Portfolio changed to Gallery (#37)"
This reverts commit 606412529477aadfed66503d27c04f90edfedb4e.

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -47,7 +47,7 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
         <!-- <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li> -->
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Gallery</span></a></li> <!-- Portfolio renamed to Gallery-->
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
@@ -282,9 +282,9 @@
       <!-- Section Title -->
       <!-- <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-       <img src="assets/img/Resume.png">
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-       </div>End Section Title -->
+        <!-- <img src="assets/img/Resume.png"> -->
+        <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+      <!-- </div>End Section Title --> -->
 
       <!-- <div class="container">
 
@@ -359,7 +359,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Gallery</h2>
+        <h2>Portfolio</h2>
         <p>Some elegant performance snapshots</p>
       </div><!-- End Section Title -->
 
