Changed font and added Resume to view

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -77,7 +77,7 @@
   <div class="row justify-content-center">
     <!-- Content section -->
     <div class="col-lg-9 text-center">
-      <h2 style="color: #E1D4C2;">AV Danse Studio</h2>
+      <h2 style="color: #E1D4C2;font-family:playfair Display">AV Danse Studio</h2>
       <p style="color: #E1D4C2;">
         Experience the elegance of Bharatanatyam at <br> 
         our studio where tradition blends passion.
@@ -119,6 +119,7 @@
             <p class="fst-italic py-3">
               Amirtha comes from an artistic background where Bharatanatyam has been part of her legacy for 3 generations. She started learning Bharatanatyam since 5 years under her mother’s guidance and performed her Arangetram at the age of 13. Since then, she has performed, choreographed and acted dance dramas. Her passion is choreographing thematic performances. In addition to her experience, she also holds Master’s degree in Bharatanatyam and continue to teach & choreograph Bharatanatyam both in India and Norway. 
             </p>
+            <a href="assets/img/my-cv.pdf" class="btn btn-primary" download>View Resume</a>
             <!-- <div class="row">
               <div class="col-lg-6">
                 <ul>
