--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -63,6 +63,7 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
+            <img src="assets/img/avds-logo-hero.png" alt style="height: auto; width: 10%; margin: -27% 0% 0% 12%;" margin>
             <h2 style="color: #E1D4C2;">AV Danse Studio</h2>
             <p style="color: #E1D4C2;">Experience the elegance of Bharatanatyam at <br> our studio where tradition blends passion.</p>
             <div class="social-links">
