--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -119,7 +119,7 @@
             <p class="fst-italic py-3">
               Amirtha comes from an artistic background where Bharatanatyam has been part of her legacy for 3 generations. She started learning Bharatanatyam since 5 years under her mother’s guidance and performed her Arangetram at the age of 13. Since then, she has performed, choreographed and acted dance dramas. Her passion is choreographing thematic performances. In addition to her experience, she also holds Master’s degree in Bharatanatyam and continue to teach & choreograph Bharatanatyam both in India and Norway. 
             </p>
-            <a href="assets/img/my-cv.pdf" class="btn btn-primary" download>View Resume</a>
+            <a href="https://bit.ly/avrresume" target="_blank" class="btn btn-primary" download>View Resume</a>
             <!-- <div class="row">
               <div class="col-lg-6">
                 <ul>
