--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -64,7 +64,7 @@
 <div class="position-fixed top-0 start-0 p-3 z-3">
   <a href="index.html">
     <img 
-      src="assets/img/avds-logo.png" 
+      src="assets/img/avds-logo-hero1.png" 
       alt="AV Danse Studio Logo" 
       class="img-fluid"
       style="max-width: 200px; width: 100px; height:auto;" /* Increased from 138px to 200px */
