--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -14,6 +14,9 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href='https://fonts.googleapis.com/css?family=Niconne' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
+  <link href="https://fonts.cdnfonts.com/css/halimun" rel="stylesheet">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
@@ -78,7 +81,7 @@
     <!-- Content section -->
     <div class="col-lg-9 text-center">
       <h2 style="color: #E1D4C2;font-family:playfair Display">AV Danse Studio</h2>
-      <p style="color: #E1D4C2;">
+      <p style="color: #E1D4C2;font-family:Halimum">
         Experience the elegance of Bharatanatyam at <br> 
         our studio where tradition blends passion.
       </p>
