--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -81,7 +81,7 @@
     <!-- Content section -->
     <div class="col-lg-9 text-center">
       <h2 style="color: #E1D4C2;font-family:playfair Display">AV Danse Studio</h2>
-      <p style="color: #E1D4C2;font-family:Halimum">
+      <p style="color: #E1D4C2;font-family:Niconne; font-size: 36px;">
         Experience the elegance of Bharatanatyam at <br> 
         our studio where tradition blends passion.
       </p>
