Added enrollment links

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -49,9 +49,9 @@
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <!-- <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li> -->
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Gallery</span></a></li> <!-- Portfolio renamed to Gallery-->
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
+        <!-- <li><a href="#Enroll"><i class="bi bi-file-earmark-text navicon"></i><span>Enroll</span></a></li> -->
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
@@ -524,6 +524,8 @@
                 <h3>Beginner Bharatanatyam classes</h3>
               </a>
               <p>We offer Bharatanatyam class for beginners from Age 5. Earlier the age it is most likely the students will learn the basics with nalinam</p>
+              <br>
+              <a href="https://forms.gle/YE9es2k5HLLaaF3W6" target="_blank" class="btn btn-primary" download>Enroll</a>
             </div>
           </div><!-- End Service Item -->
 
@@ -539,6 +541,8 @@
                 <h3>Classes for trained artist</h3>
               </a>
               <p>Teaching students trained on Bharatanatyam for a special education degree or Arangetram</p>
+              <br><br>
+              <a href="https://forms.gle/YE9es2k5HLLaaF3W6" target="_blank" class="btn btn-primary" download>Enroll</a>
             </div>
           </div><!-- End Service Item -->
 
@@ -554,6 +558,8 @@
                 <h3>Dance Workshops</h3>
               </a>
               <p>Short-term courses based on concepts and themes</p>
+              <!-- <br><br><br>
+              <p>Please reach out in the email below</p> -->
             </div>
           </div><!-- End Service Item -->
 
