Updated form links

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -540,7 +540,9 @@
                 <!-- <i class="bi bi-broadcast"></i> -->
               </div>
               <a href="#" class="stretched-link">
-                <h3>Classes for trained artist</h3>
+                <h3>Classes for trained artist
+
+                </h3>
               </a>
               <p>Teaching students trained on Bharatanatyam for a special education degree or Arangetram. Classes taken on special timings upon agreement</p>
               <br>
@@ -557,7 +559,9 @@
                 <!-- <i class="bi bi-easel"></i> -->
               </div>
               <a href="#" class="stretched-link">
-                <h3>Dance Workshops</h3>
+                <h3>Dance Workshops
+                  
+                </h3>
               </a>
               <p>Short-term courses based on concepts and themes</p>
               <!-- <br><br><br>
