Updated form links

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -527,7 +527,7 @@
               </a>
               <p>We offer Bharatanatyam class for beginners from Age 5. Earlier the age it is most likely the students will learn the basics with nalinam</p>
               <br>
-              <a href="https://forms.gle/YE9es2k5HLLaaF3W6" target="_blank" class="btn btn-primary" download>Enroll</a>
+              <a href="https://forms.gle/YE9es2k5HLLaaF3W6" target="_blank" class="btn btn-primary">Enroll</a>
             </div>
           </div><!-- End Service Item -->
 
@@ -546,7 +546,7 @@
               </a>
               <p>Teaching students trained on Bharatanatyam for a special education degree or Arangetram. Classes taken on special timings upon agreement</p>
               <br>
-              <a href="https://forms.gle/YE9es2k5HLLaaF3W6" target="_blank" class="btn btn-primary" download>Enroll</a>
+              <a href="https://forms.gle/YE9es2k5HLLaaF3W6" target="_blank" class="btn btn-primary">Enroll</a>
             </div>
           </div><!-- End Service Item -->
 
@@ -560,7 +560,7 @@
               </div>
               <a href="#" class="stretched-link">
                 <h3>Dance Workshops
-                  
+
                 </h3>
               </a>
               <p>Short-term courses based on concepts and themes</p>
