--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -544,7 +544,7 @@
 
                 </h3>
               </a>
-              <p>Teaching students trained on Bharatanatyam for a special education degree or Arangetram. Classes taken on special timings upon agreement</p>
+              <p>Teaching students trained on Bharatanatyam for a special education degree or Arangetram. Classes taken on special timings upon agreement. Please contact in the form below</p>
               <br>
               <a href="https://forms.gle/YE9es2k5HLLaaF3W6" target="_blank" class="btn btn-primary">Enroll</a>
             </div>
