Enrollment link updated to bitly

--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -527,7 +527,7 @@
               </a>
               <p>We offer Bharatanatyam class for beginners from Age 5. Earlier the age it is most likely the students will learn the basics with nalinam</p>
               <br>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLS0q_tQ6oCVSeivrMN-J8wjZlZZQi3HcmnfhwgJoSso1j0g/viewform?usp=sf_link" target="_blank" class="btn btn-primary">Enroll</a>
+              <a href="https://bit.ly/avdsenroll" target="_blank" class="btn btn-primary">Enroll</a>
             </div>
           </div><!-- End Service Item -->
 
@@ -546,7 +546,7 @@
               </a>
               <p>Teaching students trained on Bharatanatyam for a special education degree or Arangetram. Classes taken on special timings upon agreement. Please contact in the form below</p>
               <br>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLS0q_tQ6oCVSeivrMN-J8wjZlZZQi3HcmnfhwgJoSso1j0g/viewform?usp=sf_link" target="_blank" class="btn btn-primary">Enroll</a>
+              <a href="https://bit.ly/avdsenroll" target="_blank" class="btn btn-primary">Enroll</a>
             </div>
           </div><!-- End Service Item -->
 
