--- a/MainWebsite/index.html
+++ b/MainWebsite/index.html
@@ -397,12 +397,43 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-2025">2025</li>
             <li data-filter=".filter-app">2024</li>
             <li data-filter=".filter-product">2023</li>
             <li data-filter=".filter-branding">Other</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-2025">
+              <img src="assets/img/2025/2025-7.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>2025 Annual Event 7</h4>
+                <p>Annual event conducted by AVDS</p>
+                <a href="assets/img/2025/2025-7.jpg" title="2025 Event 7" data-gallery="portfolio-gallery-2025" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-2025">
+              <img src="assets/img/2025/2025-4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>2025 Annual Event 4</h4>
+                <p>Annual event conducted by AVDS</p>
+                <a href="assets/img/2025/2025-4.jpg" title="2025 Event 4" data-gallery="portfolio-gallery-2025" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-2025">
+              <img src="assets/img/2025/2025-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>2025 Annual Event 1</h4>
+                <p>Annual event conducted by AVDS</p>
+                <a href="assets/img/2025/2025-1.jpg" title="2025 Event 1" data-gallery="portfolio-gallery-2025" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/2024/2024-1.jpg" class="img-fluid" alt="">
@@ -434,6 +465,26 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-2025">
+              <img src="assets/img/2025/2025-5.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>2025 Annual Event 5</h4>
+                <p>Annual event conducted by AVDS</p>
+                <a href="assets/img/2025/2025-5.jpg" title="2025 Event 5" data-gallery="portfolio-gallery-2025" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-2025">
+              <img src="assets/img/2025/2025-2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>2025 Annual Event 2</h4>
+                <p>Annual event conducted by AVDS</p>
+                <a href="assets/img/2025/2025-2.jpg" title="2025 Event 2" data-gallery="portfolio-gallery-2025" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/2024/2024-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -460,6 +511,26 @@
                 <h4>OCF performance 2023</h4>
                 <p>Oslo color festival Bharatanatyam performance</p>
                 <a href="assets/img/Other/other-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-2025">
+              <img src="assets/img/2025/2025-6.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>2025 Annual Event 6</h4>
+                <p>Annual event conducted by AVDS</p>
+                <a href="assets/img/2025/2025-6.jpg" title="2025 Event 6" data-gallery="portfolio-gallery-2025" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-2025">
+              <img src="assets/img/2025/2025-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>2025 Annual Event 3</h4>
+                <p>Annual event conducted by AVDS</p>
+                <a href="assets/img/2025/2025-3.jpg" title="2025 Event 3" data-gallery="portfolio-gallery-2025" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
